changed all but screencasts

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,7 @@
+
+
+
+
 .copyright {
           background: rgba( 0, 0, 0, 0.7);
     color: #fff;
@@ -9,6 +13,9 @@
     
 }
 
+h1{
+  text-align: center;
+}
 
 .copyright a{
     
